[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/EnemyBody.gd" type="Script" id=1]
[ext_resource path="res://Collision/PlayerDetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Collision/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Collision/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Collision/SoftCollision.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/Stats.tscn" type="PackedScene" id=6]

[node name="EnemyBody" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Stats" parent="." instance=ExtResource( 6 )]

[node name="HitBox" parent="." instance=ExtResource( 4 )]
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
modulate = Color( 1, 0, 0, 0.807843 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
modulate = Color( 0, 1, 0, 0.807843 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.698039 )

[node name="SoftCollision" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
modulate = Color( 1, 1, 1, 0.596078 )
show_behind_parent = true
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HitBox"]

[editable path="HurtBox"]

[editable path="PlayerDetectionZone"]

[editable path="SoftCollision"]
